--- a/angular.json
+++ b/angular.json
@@ -95,7 +95,14 @@
           }
         },
         "deploy": {
-          "builder": "angular-cli-ghpages:deploy"
+          "builder": "@angular/fire:deploy",
+          "options": {
+            "prerender": false,
+            "ssr": false,
+            "browserTarget": "portfolio-FrontEnd-dinamic:build:production",
+            "firebaseProject": "portfolio-dc280",
+            "firebaseHostingSite": "portfolio-dc280"
+          }
         }
       }
     }
